layout bug

--- a/css/main.css
+++ b/css/main.css
@@ -93,4 +93,7 @@ body{
 	    bottom: 0px;
 		right: 30px;
 	}
+	#bars{
+		margin-top: 60px;
+	}
 }
